<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LunchListActivity!</string>
    <string name="app_name">Restaurant Guide</string>
    <string name="take_out">Take out</string>
    <string name="delivery">Delivery</string>
    <string name="sit_down">Sit down</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="location">Location: </string>
    <string name="feed_url">Feed URL</string>
    <string name="save_location">Save location</string>
    <string name="show_map">Show on map</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="sort_order">Sort Order</string>
    <string name="choose_order">Choose a sort order!</string>
    <string name="delete_res">Delete restaurant</string>
    <string name="not_set">(not set)</string>
    <string name="notes">Notes</string>
    <string name="phone">Phone: </string>
    <string name="web">Homepage: </string>
    <string name="details">Details: </string>
    <string name="description">Description: </string>
    <string name="reviews">Been there...</string>
    <string name="menu_edit">Edit details</string>
    <string name="main_help">Help</string>
    <string name="main_about">About</string>
    <string name="add_to_fav">Add to favourtives</string>
</resources>
