<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<TableLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="1"
		android:shrinkColumns="1"
		>
		<TableRow>
			<TextView android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/search" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="fill"></TextView>
			
		</TableRow>
		<TableRow>
			<TextView android:text="@string/name" />
			<EditText android:id="@+id/search_name" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/address" />
			<EditText android:id="@+id/search_addr" />

		</TableRow>
		<TableRow>
			<TextView android:text="@string/phone" />
			<EditText android:id="@+id/search_phone" />
		</TableRow>
		<TableRow>
			<TextView android:text="@string/web" />
			<EditText android:id="@+id/search_web" />
		</TableRow>
		<EditText android:id="@+id/search_details"
			android:inputType="textMultiLine"
			android:gravity="top"
			android:lines="4"
			android:scrollHorizontally="false"
			android:maxLines="2"
			android:layout_span="2"
			android:hint="@string/details"
			android:layout_marginTop="4dip"
		/>
	
		<Button android:text="@string/search" android:layout_width="wrap_content" android:onClick="GetParams"/>

	</TableLayout>
</ScrollView>