<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/widget32"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
	android:stretchColumns="1" android:background="#adb6bd"
	android:textColor="#000000">

	<TextView android:id="@+id/details_textView"
		android:textColor="#000000" android:textStyle="bold" android:padding="5sp"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:layout_width="wrap_content" android:text="@string/details"
		android:layout_height="wrap_content"></TextView>

	<!--NAME TEXTFIELDS  -->


	<TableRow android:id="@+id/widget35" android:layout_width="fill_parent"
		android:orientation="horizontal" android:background="@drawable/round_shape"
		android:layout_marginRight="10px" android:layout_marginLeft="10px"
		android:layout_marginBottom="10px">
		<TextView android:text="@string/name" android:textSize="20sp"
			android:textColor="#000000" android:textStyle="bold"
			android:paddingLeft="10sp" android:paddingBottom="5sp"
			android:paddingRight="5sp" android:paddingTop="5sp">
		</TextView>
		<LinearLayout>
			<TextView android:id="@+id/details_name" android:text="Aranylabda Hotel - Étterem"
				android:paddingLeft="10sp" android:paddingBottom="5sp"
				android:paddingRight="5sp" android:paddingTop="5sp"
				android:textColor="#000000" android:layout_height="wrap_content"
				android:layout_width="160dip">
			</TextView>
		</LinearLayout>
	</TableRow>

	<!-- ADDRRESS TEXTFIELDS -->

	<TableRow android:id="@+id/widget45" android:layout_width="fill_parent"
		android:orientation="horizontal" android:background="@drawable/round_shape"
		android:layout_marginRight="10px" android:layout_marginLeft="10px"
		android:layout_marginBottom="10px">
		<TextView android:id="@+id/widget46" android:layout_width="wrap_content"
			android:textColor="#000000" android:text="@string/address"
			android:textSize="20sp" android:textStyle="bold" android:paddingLeft="10sp"
			android:paddingBottom="5sp" android:paddingRight="5sp"
			android:paddingTop="5sp">
		</TextView>
		<LinearLayout>
			<TextView android:id="@+id/details_address"
				android:textColor="#000000" android:layout_width="160dip"
				android:paddingLeft="10sp" android:paddingBottom="5sp"
				android:paddingRight="5sp" android:paddingTop="5sp"
				android:layout_height="wrap_content">
			</TextView>
		</LinearLayout>
	</TableRow>
	<!--PHONE TEXTFIELDS  -->

	<TableRow android:id="@+id/widget48" android:layout_width="fill_parent"
		android:orientation="horizontal" android:background="@drawable/round_shape"
		android:layout_marginRight="10px" android:layout_marginLeft="10px"
		android:layout_marginBottom="10px">

		<TextView android:id="@+id/widget49" android:text="@string/phone"
			android:textColor="#000000" android:textSize="20sp"
			android:textStyle="bold" android:paddingLeft="10sp"
			android:paddingBottom="5sp" android:paddingRight="5sp"
			android:paddingTop="5sp">
		</TextView>

		<TextView android:id="@+id/details_phone" android:clickable="true" android:autoLink="all"
			android:textColor="#000000" android:onClick="performDial"
			android:text="TextView" android:paddingLeft="10sp"
			android:paddingBottom="5sp" android:paddingRight="5sp"
			android:paddingTop="5sp">
		</TextView>

	</TableRow>

	<!--WEB TEXTFIELDS  -->

	<TableRow android:id="@+id/widget52" android:orientation="horizontal"
		android:background="@drawable/round_shape" android:layout_marginRight="10px"
		android:layout_marginLeft="10px" android:layout_marginBottom="10px">

		<TextView android:id="@+id/widget53" android:text="@string/web"
			android:textColor="#000000" android:textSize="20sp"
			android:textStyle="bold" android:paddingLeft="10sp"
			android:paddingBottom="5sp" android:paddingRight="5sp"
			android:paddingTop="5sp">
		</TextView>

		<LinearLayout>
			<TextView android:id="@+id/details_web" android:autoLink="web"
				android:textColor="#000000" android:layout_height="wrap_content"
				android:layout_width="160dip" android:paddingLeft="10sp"
				android:paddingBottom="5sp" android:paddingRight="5sp"
				android:paddingTop="5sp">
			</TextView>
		</LinearLayout>
	</TableRow>

	<TextView android:background="@drawable/round_shape"
		android:id="@+id/details_details" android:textColor="#000000"
		android:maxLines="7" android:scrollbars="vertical"
		android:paddingLeft="10sp" android:paddingBottom="5sp"
		android:paddingRight="5sp" android:paddingTop="5sp" android:layout_marginLeft="10sp" android:layout_marginRight="10sp"></TextView>

</TableLayout>
